# cs5224_AI-Renovator

./: .env.example  .gitignore  README.md  REFACTORING_SUMMARY.md  build_lambda.sh  pyproject.toml  requirements.txt  schema.sql  sync_schema.py
app/: db.py  main.py
app/models/: orm.py  schemas.py
app/routers/: auth.py  cart.py  generation.py  products.py  projects.py
app/services/: auth.py  auth_service.py  cart_service.py  gemini_generation.py  generation_service.py  ikea_provider.py  product_provider.py  project_service.py  provider_registry.py  refine_service.py  s3.py  secrets.py
app/stores/: __init__.py  affiliate_click_store.py  base.py  design_generation_store.py  generation_product_store.py  photo_store.py  product_store.py  project_store.py  user_store.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AuthModal.tsx  Header.tsx  ProductCard.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Browse.tsx  Home.tsx  Projects.tsx
scripts/: PHASE3_TESTING.md  test_e2e_local.py  test_gemini_local.py
